fix: codespace color change following dark mode

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -1,5 +1,6 @@
 .highlight  {
   background: var(--code-bg);
+  color: var(--text-color);
   padding: 1px 1em;
   border-radius: 3px;
   font-size: 0.9em;
@@ -9,7 +10,71 @@
   code{
     padding: 0;
     font-family: inherit;
+    color: inherit;
   }
+}
+
+/* Dark mode overrides for syntax highlighting */
+.is-dark .highlight,
+[data-theme="dark"] .highlight {
+  .c { color: #888877; font-style: italic } /* Comment */
+  .err { color: #f2777a; background-color: #333333 } /* Error */
+  .k { color: #cc99cc; font-weight: bold } /* Keyword */
+  .o { color: #66cccc; font-weight: bold } /* Operator */
+  .cm { color: #888877; font-style: italic } /* Comment.Multiline */
+  .cp { color: #888888; font-weight: bold } /* Comment.Preproc */
+  .c1 { color: #888877; font-style: italic } /* Comment.Single */
+  .cs { color: #888888; font-weight: bold; font-style: italic } /* Comment.Special */
+  .gd { color: #f2777a; background-color: #443333 } /* Generic.Deleted */
+  .ge { font-style: italic } /* Generic.Emph */
+  .gr { color: #f2777a } /* Generic.Error */
+  .gh { color: #888888 } /* Generic.Heading */
+  .gi { color: #99cc99; background-color: #334433 } /* Generic.Inserted */
+  .go { color: #cccccc } /* Generic.Output */
+  .gp { color: #888888 } /* Generic.Prompt */
+  .gs { font-weight: bold } /* Generic.Strong */
+  .gu { color: #cccccc } /* Generic.Subheading */
+  .gt { color: #f2777a } /* Generic.Traceback */
+  .kc { color: #cc99cc; font-weight: bold } /* Keyword.Constant */
+  .kd { color: #cc99cc; font-weight: bold } /* Keyword.Declaration */
+  .kp { color: #cc99cc; font-weight: bold } /* Keyword.Pseudo */
+  .kr { color: #cc99cc; font-weight: bold } /* Keyword.Reserved */
+  .kt { color: #ffcc66; font-weight: bold } /* Keyword.Type */
+  .m { color: #f99157 } /* Literal.Number */
+  .s { color: #99cc99 } /* Literal.String */
+  .na { color: #ffcc66 } /* Name.Attribute */
+  .nb { color: #cccccc } /* Name.Builtin */
+  .nc { color: #ffcc66; font-weight: bold } /* Name.Class */
+  .no { color: #f99157 } /* Name.Constant */
+  .ni { color: #cccccc } /* Name.Entity */
+  .ne { color: #f2777a; font-weight: bold } /* Name.Exception */
+  .nf { color: #66cccc; font-weight: bold } /* Name.Function */
+  .nn { color: #cccccc } /* Name.Namespace */
+  .nt { color: #f2777a } /* Name.Tag */
+  .nv { color: #f2777a } /* Name.Variable */
+  .ow { font-weight: bold } /* Operator.Word */
+  .w { color: #333333 } /* Text.Whitespace */
+  .mf { color: #f99157 } /* Literal.Number.Float */
+  .mh { color: #f99157 } /* Literal.Number.Hex */
+  .mi { color: #f99157 } /* Literal.Number.Integer */
+  .mo { color: #f99157 } /* Literal.Number.Oct */
+  .sb { color: #99cc99 } /* Literal.String.Backtick */
+  .sc { color: #99cc99 } /* Literal.String.Char */
+  .sd { color: #99cc99 } /* Literal.String.Doc */
+  .s2 { color: #99cc99 } /* Literal.String.Double */
+  .se { color: #99cc99 } /* Literal.String.Escape */
+  .sh { color: #99cc99 } /* Literal.String.Heredoc */
+  .si { color: #99cc99 } /* Literal.String.Interpol */
+  .sx { color: #99cc99 } /* Literal.String.Other */
+  .sr { color: #66cccc } /* Literal.String.Regex */
+  .s1 { color: #99cc99 } /* Literal.String.Single */
+  .dl { color: #99cc99 } /* Literal.String.Delimiter */
+  .ss { color: #99cc99 } /* Literal.String.Symbol */
+  .bp { color: #cccccc } /* Name.Builtin.Pseudo */
+  .vc { color: #f2777a } /* Name.Variable.Class */
+  .vg { color: #f2777a } /* Name.Variable.Global */
+  .vi { color: #f2777a } /* Name.Variable.Instance */
+  .il { color: #f99157 } /* Literal.Number.Integer.Long */
 }
 
 div.highlight {
